feat: navbar added in Form and Demo file,also styling added in mystyle file

--- a/CSS/mystyle.css
+++ b/CSS/mystyle.css
@@ -9,3 +9,15 @@ h2{
 body{
   background-color: aquamarine;
 }
+header{
+  border: 4px double red;
+}
+.navbar{
+  border : 2px solid;
+  padding:10px;
+  background-color:black;
+}
+.navbar a{
+  padding:10px;
+  border:white;
+}
